<resources>
    <string name="app_name">DebtsTracker</string>

    <string name="money">Money</string>
    <string name="debts">Debts</string>
    <string name="currency_lei">lei to</string>
    <string name="debts_tracker">Debts Tracker</string>
    <string name="username_email_login">Username/Email</string>
    <string name="password_login">Password</string>
    <string name="log_in">Log In</string>
    <string name="no_account_signup_here">No account? SignUp here</string>
    <string name="sign_up">Sign Up</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="email_or_username">Email/Username</string>

    <string name="email_not_match">Email addresses don\'t match</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="invalid_login_data">Invalid email or password</string>
    <string name="email_already_used">Email is already used</string>
    <string name="invalid_data">Invalid data</string>
    <string name="mandatory_fields">All fields are mandatory</string>
    <string name="password_donot_match">Passwords don\'t match</string>
    <string name="friend">Friend</string>
    <string name="add">Add</string>
    <string name="who_paid">Who paid?</string>
    <string name="error_whopaid_not_chosen">You have to select who paid</string>
    <string name="error_friend_not_chosen">You have to choose a friend</string>
    <string name="all_fileds_completed">All fileds must be completed</string>
    <string name="debt_added">Debt added successfully</string>
    <string name="salary">Salary</string>
    <string name="salary_day">Salary Day</string>
    <string name="monthly_payments">Monthly Payments</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="log_out">Log Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="loreum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s stand.10.33 of</string>
    <string name="no_users_found">No users found</string>
    <string name="hidden_pass">*******</string>
    <string name="change_password">Change Password</string>
    <string name="save_password">Save Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="error_not_same_password">New Password and Confirm Password must be identical</string>
    <string name="incorrect_current_password">Current Password is incorrect</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sum">Sum</string>
    <string name="spinner_friend_appearance">Each person should appear only once</string>
    <string name="description">Description</string>
    <string name="lei">lei</string>
    <string name="total">TOTAL</string>
    <string name="debts_feed">Debts Feed</string>
    <string name="for_new_notifications">for new notifications</string>
    <string name="notif_friend_req">sent you a friend request</string>
    <string name="notif_new_debt">added a new debt</string>
    <string name="notifications">Notifications</string>
    <string name="deny">Deny</string>
    <string name="debt_request">Debt Request</string>
    <string name="friend_request">Friend Request</string>
    <string name="friend_req_accepted">accepted your friend request</string>
    <string name="debt_accepted">accepted your debt</string>
    <string name="debt_denied">denied your debt request</string>
    <string name="exit_icon">exit icon</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="profile">Profile</string>
    <string name="add_debt">Add Debt</string>
    <string name="success_logout">You have successfully logout</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="empty_friend_list">Empty Friend List</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="list_is_empty">List is empty</string>
    <string name="sent_you_friend_request">Sent you a friend request</string>
    <string name="respond">Respond</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="mine">Mine</string>
    <string name="shared_sum">Shared sum</string>
    <string name="lender">Lender</string>
    <string name="borrowers">Borrowers</string>
    <string name="make_short_description">Make a short description</string>
    <string name="select_user">Select an user</string>
    <string name="lender_not_selected">Lender field must be completed</string>
    <string name="user_must_be_selected_once">An user must be only once selected</string>
    <string name="at_least_one_borrower_selected">There must be at least one borrower selected</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="edit_profile">Edit profile</string>
    <string name="pick_friend_from_list">Pick Friend from List</string>
    <string name="friend_list">Friends</string>
    <string name="description_needed">Description must be completed</string>
    <string name="ok">OK</string>
    <string name="info">Information</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="debt_added_successfully">Debt was added successfully</string>
    <string name="confirm">Confirm</string>
    <string name="_0">0</string>
    <string name="lent">Lent</string>
    <string name="borrowed">Borrowed</string>
    <string name="equate">Equate</string>
    <string name="more">More</string>
    <string name="date">Date</string>

    <string name="error_occurred">An error has occurred. Please try again</string>
    <string name="internet_error">An error has occurred. Please check your internet connection and try again!</string>
    <string name="server_error">Server is not responding. Please try again!</string>
    <string name="json_parsing_error">An error occurred in the server communication, please contact your administrator (Json Parse Error)</string>

</resources>
