<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.debts.debtstracker.data.network.model.FriendshipStatus"/>

        <variable
            name="friendshipStatus"
            type="com.debts.debtstracker.data.network.model.FriendshipStatus" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <Button
            android:id="@+id/btn_friends"
            style="@style/FriendshipStatusButton"
            android:text="@string/friends"
            android:visibility="@{friendshipStatus == FriendshipStatus.FRIENDS ? View.VISIBLE : View.GONE}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_add_friend"
            style="@style/FriendshipStatusButton"
            android:text="@string/add_friend"
            android:visibility="@{friendshipStatus == FriendshipStatus.NOT_FRIENDS ? View.VISIBLE : View.GONE}"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_friends"/>

        <TextView
            android:id="@+id/tv_request_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/sent_you_friend_request"
            app:layout_constraintTop_toBottomOf="@id/btn_add_friend"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_request_received"
            style="@style/FriendshipStatusButton"
            android:text="@string/respond"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_request_received"
            />

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_request_received, btn_request_received"
            android:visibility="@{friendshipStatus == FriendshipStatus.REQUEST_RECEIVED ? View.VISIBLE : View.GONE}"
            />

        <TextView
            android:id="@+id/tv_request_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_request_sent"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/btn_request_received"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_request_sent"
            style="@style/FriendshipStatusButton"
            android:text="@string/cancel"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_request_sent"
            />

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_request_sent, btn_request_sent"
            android:visibility="@{friendshipStatus == FriendshipStatus.REQUEST_SENT ? View.VISIBLE : View.GONE}"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>