<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lender"
                android:textSize="16sp"
                android:textColor="@color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerLender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:spinnerMode="dropdown"
                android:layout_marginStart="4dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLender"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerLender"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:textSize="12sp"
                android:maxLines="2"
                android:background="@color/white"
                android:textColor="@color/black"
                android:hint="@string/make_short_description"
                android:imeOptions="actionDone"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

            <TextView
                android:id="@+id/tvBorrower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/borrowers"
                android:layout_marginTop="15dp"

                app:layout_constraintTop_toBottomOf="@id/etDescription"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/llBorrowersContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"

                app:layout_constraintTop_toBottomOf="@id/tvBorrower"
                app:layout_constraintStart_toStartOf="parent"
                />

            <ImageView
                android:id="@+id/ivAddBorrower"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_plus_circle"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llBorrowersContainer"
                tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnAddDebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAllCaps="false"
            android:layout_marginBottom="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="v_loading_bg,pb_spinner" />

        <View
            android:id="@+id/v_loading_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/greyLightTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@{Long.MAX_VALUE - 1}"
            android:clickable="true"
            tools:visibility="gone"
            android:focusable="true" />

        <ProgressBar
            android:id="@+id/pb_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:elevation="@{Long.MAX_VALUE}"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>