<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65"/>

        <TextView
            android:id="@+id/tvIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerBorrowers"/>

        <Spinner
            android:id="@+id/spinnerBorrowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:hint="@string/name"

            app:layout_constraintStart_toEndOf="@id/tvIndex"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"/>


        <EditText
            android:id="@+id/etSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sum"
            android:maxLength="9"
            android:background="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:digits="0123456789."
            android:inputType="number"
            android:imeOptions="actionDone"

            app:layout_constraintStart_toEndOf="@id/spinnerBorrowers"
            app:layout_constraintTop_toTopOf="@id/spinnerBorrowers"
            app:layout_constraintBottom_toBottomOf="@id/spinnerBorrowers"/>

        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lei"
            android:textSize="14sp"
            android:layout_marginStart="4dp"

            app:layout_constraintStart_toEndOf="@id/etSum"
            app:layout_constraintTop_toTopOf="@id/spinnerBorrowers"
            app:layout_constraintBottom_toBottomOf="@id/spinnerBorrowers"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
